--- a/style.css
+++ b/style.css
@@ -88,6 +88,7 @@ header nav ul li a{
 }
 .labelSection{
     width: 100%;
+    height: 4rem;
     gap: 10px;
     box-shadow: var(--box-shadow);
     border-radius: 2px;
